@@ -1,0 +1,20 @@
+--TEST--
+Import
+--CSS--
+@charset "ISO-8859-1";
+@import url("bluish.css");
+@import url(bluish.css);
+@import url('bluish.css');
+@import 'bluish.css';
+@import "bluish.css";
+@import url("bluish.css") projection, tv;
+@import "bluish.css" projection, tv;
+--PRINT--
+@charset "ISO-8859-1";
+@import"bluish.css";
+@import"bluish.css";
+@import"bluish.css";
+@import"bluish.css";
+@import"bluish.css";
+@import"bluish.css" projection, tv;
+@import"bluish.css" projection, tv;
