@@ -31,5 +31,6 @@ Key: # = backwards incompatible change, ! = new feature, - = bugfix.
 - At-selectors optimized by removing unnecessary url()
 - Fixed optimisation: 1.0 was not optimised to 1
 - Fixed incorrect parsing of !imporant close to numbers
+- Fixed incorrect removing url() from @import and parsing with media type specified
 - Allowed Copy to Clipboard for Firefox if preference set (if not, gives 
   instructions on how to add and warning re: security)
